# dextro

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dextro/: __init__.py  dataset.py  enrichers.py  indexing.py  loaders.py  torch.py  types.py
dextro/console/: entrypoint.py  index_dataset.py
tests/: conftest.py  test_dataset.py  test_enrichers.py  test_indexing.py
